Fixed z-index bug

--- a/src/css/less/menu-bar.less
+++ b/src/css/less/menu-bar.less
@@ -3,6 +3,7 @@ nav {
     position: fixed;
     width: 100%;
     pointer-events: none;
+    z-index: 5;
 
     .name {
 
