--- a/src/css/less/my-work.less
+++ b/src/css/less/my-work.less
@@ -9,6 +9,7 @@
         position: relative;
         height: 100%;
         width: 337px;
+        background: pink;
 
         img,
         div {
@@ -17,6 +18,11 @@
             left: 50%;
             top: 50%;
             transform: translate(-50%, -50%);
+        }
+
+        img {
+
+            margin-top: 4px;
         }
 
         h4 {
@@ -36,7 +42,7 @@
 
         li {
 
-            float: left;
+            display: inline-block;
             margin-left: 17px;
         }
 
